--- a/about.html
+++ b/about.html
@@ -14,6 +14,27 @@
         <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <style>
+            /* Estilo personalizado para las fuentes */
+            .section-heading-upper {
+                font-family: 'Pacifico', cursive;
+                font-size: 1.5rem;
+                color: #d57a28;
+            }
+
+            .section-heading-lower {
+                font-family: 'Pacifico', cursive;
+                font-size: 2rem;
+                color: #ff9800;
+            }
+
+            p {
+                font-family: 'Roboto', sans-serif;
+                font-size: 1rem;
+                line-height: 1.6;
+                color: #333;
+            }
+        </style>
     </head>
     <body>
         <header class="main-header">
