--- a/products.html
+++ b/products.html
@@ -119,7 +119,7 @@
         </section>                
         <footer class="footer text-faded text-center py-5">
             <div class="container">
-                <p class="m-0 small">Copyright &copy; SoloChifles Sitio Web</p>
+                <h class="m-0 small">Copyright &copy; SoloChifles Sitio Web</h>
                 <div class="social-icons mt-3">
                     <a href="https://www.facebook.com/solochifles" target="_blank" class="social-link">
                         <img src="assets\img\facebook.png" alt="Facebooks">
