--- a/Login.html
+++ b/Login.html
@@ -195,7 +195,7 @@
     const form = document.getElementById('loginForm');
     if (form.checkValidity()) {
         // Redirigir si el formulario es válido
-        window.location.href = '../SoloChifles-Sitio Web - copiaaaa/Administrador/index.html';
+        window.location.href = '../Solo-Chifles-Web/Administrador/index.html';
     } else {
         // Mostrar validaciones si el formulario no es válido
         form.reportValidity();
